# inf-thesis-latex-cls

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  infthesis.cls  uoe-infthesis-latex-cls.cmake  uoe-logos-extra.cmake
eushield/: eushield-fullcolour.ps  eushield-noback.ps  eushield-normal.ps  eushield-reversed.ps  eushield-twocolour.ps  eushield.eps  eushield.sty
src/: CMakeLists.txt  Makefile  infthesis.cls
